7903028: TestEnvironment.java: [removal] Character(char) in Character has been deprecated and marked for removal